added controllers admin and auth
