# src/models/category-model.js
@@ -1,0 +1,11 @@
+const mongoose = require('mongoose');
+
+const CategorySchema = new mongoose.Schema({
+
+    name: {
+        type: String,
+        required:true
+    }
+});
+
+module.exports=mongoose.model('Category',CategorySchema)
