# src/routes/auth.routes.js
@@ -1,15 +1,9 @@
 const express = require("express");
 const authController = require("../controllers/auth.controller");
-const { verifyToken, isAdmin } = require("../middlewares/auth.middleware");
+const { registerValidator,loginValidator } = require("../middlewares/validation.middleware");
 
 const router = express.Router();
-
-router.post("/register", authController.register);
-
-router.post("/login", authController.login);
-
-router.get("/admin", verifyToken, isAdmin, (req, res) => {
-  res.status(200).json({ message: "Welcome, Admin!" });
-});
+router.post("/register", registerValidator, authController.registerUser);
+router.post("/login", loginValidator, authController.loginUser);
 
 module.exports = router;
